--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"> <img src="./assets/logo.png" alt="Brand Logo"></a>
+        <a href="index.html"> <img src="logo.png" alt="Brand Logo"></a>
         <ul>
             <li><a href="#preorder" onclick="toggleModal()">Pre-Order</a> </li>
             <li><a href="./about.html">About</a> </li>
@@ -20,9 +20,9 @@
         </ul>
     </header>
     <section class="landing flex">
-        <img class="landing--img" src="./assets/smoke.png">
+        <img class="landing--img" src="smoke.png">
         <h1>KITCH</h1>
-        <img src="./assets/img-figures.png" alt="Shadowy Figures">
+        <img src="img-figures.png" alt="Shadowy Figures">
         <h2>TO VICTORY</h2>
         <div class="modal">
             <div class="modal__half modal__about">
@@ -68,14 +68,14 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ullam pariatur, laudantium sunt sint beatae fugiat blanditiis eos animi tempore?</p>
             </div>
             <div class="width-50">
-                <img src="./assets/318149627_10226580260040465_8824898277764596572_n.jpeg">
+                <img src="318149627_10226580260040465_8824898277764596572_n.jpeg">
             </div>
         </div>
     </section>
     <section class="preorder flex">
         <div class="container flex">
             <div class="width-50">
-                <img src="./assets/conceptart.png">
+                <img src="conceptart.png">
             </div>
             <div class="width-50">
                 <h2>Preorder your copy today</h2>
@@ -91,7 +91,7 @@
         <div class="row">
             <a href="#" class="footer__anchor">
                 <figure>
-                    <img src="./assets/logo.png" alt="Creative Logo">
+                    <img src="logo.png" alt="Creative Logo">
                 </figure>
                 <span class="footer__anchor--popper">
                     Top
