--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"> <img src="./assets/logo.png" alt="Brand Logo"></a>
+        <a href="index.html"> <img src="logo.png" alt="Brand Logo"></a>
         <ul>
             <li><a href="#preorder" onclick="toggleModal()">Pre-Order</a> </li>
             <li><a href="./about.html">About</a> </li>
@@ -69,7 +69,7 @@
         <div class="row">
             <a href="#" class="footer__anchor">
                 <figure>
-                    <img src="./assets/logo.png" alt="Creative Logo">
+                    <img src="logo.png" alt="Creative Logo">
                 </figure>
                 <span class="footer__anchor--popper">
                     Top
