--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
             <li><button class="btn__mailing">Mailing List</button></li>
         </ul>
     </header>
+    <main>
     <section class="about flex">
         <div class="container flex">
             <div class="width-50">
@@ -64,7 +65,7 @@
             </div>
           </div>
     </section>
-    
+</main>
     <footer>
         <div class="row">
             <a href="#" class="footer__anchor">
