--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><button class="btn__mailing">Mailing List</button></li>
         </ul>
     </header>
+    <main>
     <section class="landing flex">
         <img class="landing--img" src="smoke.png">
         <h1>KITCH</h1>
@@ -87,6 +88,7 @@
             
         </div>
     </section>
+</main>
     <footer>
         <div class="row">
             <a href="#" class="footer__anchor">
